# dothoard

./: AGENTS.md  Cargo.toml  DEVELOPMENT_PLAN.md  MEMORY.md  Makefile  PLAN.md  README.md
docs/: authentication.md  safety.md
scripts/: build-release.sh
src/: app.rs  cli.rs  config.rs  diagnostics.rs  git.rs  lib.rs  locking.rs  main.rs  notification.rs  paths.rs  state.rs  systemd.rs
src/backup/: changeset.rs  check.rs  compare.rs  coordinator.rs  deletion.rs  executor.rs  ignore.rs  inventory.rs  manifest.rs  mapping.rs  mod.rs  planner.rs  secrets.rs  walker.rs
src/git/: auth.rs  commit.rs  init.rs  mod.rs  ownership.rs  repository.rs  runner.rs  staging.rs  sync.rs  tracked.rs  worktree.rs
src/tui/: event.rs  mod.rs  task.rs  terminal.rs  ui.rs
src/tui/screens/: automation.rs  history.rs  ignore.rs  mod.rs  preview.rs  repository.rs  sources.rs
tests/: acceptance.rs  bootstrap.rs  git_workflow.rs  hardening.rs  mirror.rs  orchestration.rs
tests/support/: mod.rs
