[package]
name = "dothoard"
version = "1.0.0"
edition = "2024"
authors = ["Henrique"]
description = "Automatically back up dotfiles to a Git repository with scheduled commits and pushes"
license = "GPL-3.0-or-later"
repository = "https://github.com/henrique/dothoard"
homepage = "https://github.com/henrique/dothoard"
readme = "README.md"
keywords = ["dotfiles", "backup", "git", "automation", "tui"]
categories = ["command-line-utilities", "filesystem"]
rust-version = "1.85"

[[bin]]
name = "dothoard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6.0"
fs2 = "0.4"
hostname = "0.4"
ignore = "0.4.31"
libc = "0.2"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
